Changes since last push:
 - Location is now a struct, as it always should have been.

Known bugs:
 - When generating the world, canyon layers don't go all the way across

Known "features": 
 - Both pressing and releasing a key accelerates the player in the same
   direction
 - If the player has multiple keys for a movement, holding two of them down
   will accelerate the player twice as fast
