@@ -5,31 +5,9 @@
 #include <string>
 #include <random> // For the fancy randomness like a normal distribution
 #include "Tile.hh"
+#include "MapHelpers.hh"
 
 using namespace std;
-
-// A struct for holding an x and a y coordinate.
-struct Location {
-    // The x and y values of the location
-    int x;
-    int y;
-};
-
-// A class to talk about directions. Down and West are smaller numbers.
-enum class Direction {
-    DOWN,
-    UP,
-    WEST,
-    EAST
-};
-
-/* A class for passing a biome argument, to pick which pattern of 
-world-generation to use. */
-enum class WorldType {
-    TEST,
-    EARTH,
-    MOON
-};
 
 // A class for a map for a sandbox game
 // Currently its only focus is on generating the map
