@@ -1,5 +1,6 @@
 #include <cassert>
 #include "Movable.hh"
+#include <iostream>
 
 using namespace std;
 
@@ -17,6 +18,8 @@ void Movable::accelerate() {
     yVelocity += yAccel;
 
     // Make sure velocity is less than max velocity
+    // TODO: xVelocity is uninitialized. I need to learn more about 
+    // inheritance.
     xVelocity = min(xVelocity, xMaxSpeed);
     yVelocity = min(yVelocity, yMaxSpeed);
     xVelocity = max(xVelocity, -1 * xMaxSpeed);
